# dlt-explorer

./: .clang-format  .clang-tidy  .gitignore  AGENTS.md  CMakeLists.txt  CMakePresets.json  CONTEXT.md  Cargo.toml  Dependencies.cmake  ProjectOptions.cmake  README.md  README_building.md  README_dependencies.md  README_docker.md  build.ps1  build.sh  dlt-explorer.raddbg  parity_manifest.toml  progress.txt  work-on-issue.md
.devcontainer/: common.yaml  ubuntu.dockerfile
.devcontainer/nvim/: lazyvim.json
.devcontainer/ubuntu/: devcontainer.json  docker-compose.yaml
.github/: constants.env
.github/workflows/: auto-clang-format.yml  ci.yml  codeql.yml
benches/: dlt.rs  read_cold.rs  read_warm.rs
benches/common/: mod.rs
benches/operations/: decode_payload.rs  desktop_query.rs  fixtures.rs  mod.rs  open_file.rs  parse_header.rs  scan_frames.rs
benches/profiler/: metrics.rs  mod.rs  repetition_tester.rs
cmake/: Cache.cmake  CompilerWarnings.cmake  Cuda.cmake  Doxygen.cmake  Hardening.cmake  InterproceduralOptimization.cmake  LibFuzzer.cmake  Linker.cmake  PackageProject.cmake  PreventInSourceBuilds.cmake  Sanitizers.cmake  StaticAnalyzers.cmake  Tests.cmake
configured_files/: CMakeLists.txt  config.hpp.in
docs/: AUTOSAR_PRS_LogAndTraceProtocol.md  benchmark-parity.md
docs/adr/: 0001-auto-detect-dlt-version-and-route-parser.md  0002-storage-header-matches-dlt-daemon.md  0003-organize-dlt-modules-by-protocol-version.md  0004-shared-error-and-payload-decode.md  0005-use-egui-for-desktop-gui-rewrite.md  0006-layered-desktop-architecture-and-async-load-jobs.md
docs/agents/: domain.md  issue-tracker.md  triage-labels.md
examples/: testfile_1.dlt  testfile_2.dlt  testfile_20-24.dlt  testfile_3.dlt
fuzz_test/: CMakeLists.txt  fuzz_tester.cpp
include/dlt_explorer/: sample_library.hpp
src/: CMakeLists.txt  cmd_line_parser.rs  desktop.rs  dlt.rs  gui.rs  iconbar.rs  lib.rs  main.cpp  main.rs  message.rs  toolbar.rs  viewer.rs
src/adapter/: CMakeLists.txt
src/adapter/with_dlt_daemon/include/: adapter.h
src/adapter/with_dlt_daemon/src/: adapter.cpp
src/adapter/without_dlt_daemon/include/: adapter.h  dlt_common.h  dlt_protocol.h  dlt_types.h
src/adapter/without_dlt_daemon/src/: adapter.cpp  dlt_common.cpp
src/buffer/: CMakeLists.txt
src/buffer/include/: buffer.h
src/buffer/src/: buffer.cpp
src/desktop/: application.rs  index.rs  mod.rs  retained.rs  ui.rs
src/dlt/: dlt_common.rs  dlt_protocol.rs  error.rs  framer.rs  header.rs  intern.rs  mod.rs  payload.rs  protocol.rs  storage.rs  v1.rs
src/dlt/tests/: testfile_control_messages.dlt
src/dlt/v1/: framer.rs  header.rs  mod.rs  payload.rs  protocol.rs
src/dlt/v2/: error.rs  framer.rs  header.rs  mod.rs  payload.rs  protocol.rs
src/dlt_parser/: CMakeLists.txt
src/dlt_parser/include/: dlt_parser.h
src/dlt_parser/src/: dlt_parser.cpp
src/ftxui_sample/: CMakeLists.txt  main.cpp
src/options/: CMakeLists.txt
src/options/include/: options.h
src/options/src/: options.cpp
src/parse_cmd_line/: CMakeLists.txt
src/parse_cmd_line/include/: parse_cmd_line.h
src/parse_cmd_line/src/: subcommand_gui.cpp  subcommand_term.cpp
src/sample_library/: CMakeLists.txt  sample_library.cpp
test/: CMakeLists.txt  constexpr_tests.cpp  tests.cpp
test/buffer/: test_buffer.cpp
test/data/: testfile_empty_number_text.dlt  testfile_multiple_number_of_arguments.dlt  testfile_number_and_text.dlt  testfile_single_payloads.dlt
test/dlt_parser/: test_dlt_parser.cpp
test/unittests/: test_buffer.cpp  test_dlt_parser.cpp
tests/: cmd_line_parser.rs  parity_contract.rs
tests/data/: testfile_type_id_and_text.dlt
