[package]
name = "dlt-explorer"
version = "0.1.0"
edition = "2024"
description = "App for visualizing and exploring DLT files"

[dependencies]
anyhow = "1.0.100"
byteorder = "1.5.0"
clap = { version = "4.5.48", features = ["derive"] }
iced = "0.13.1"
itertools = "0.14.0"
memchr = "2.7.6"

[dev-dependencies]
assert_cmd = "2.0.17"
assert_fs = "1.1.3"
criterion = { version = "0.7", features = ["html_reports"] }
predicates = "3.1.3"

[[bench]]
name = "dlt"
harness = false
